# aire-learner-scorecard

./: .gitignore  README.md  app.py  generate_synthetic_telemetry.py  pyproject.toml  requirements.txt
data/: aire_telemetry_synthetic.csv
scripts/: capture_screenshots.py  generate_synthetic_telemetry.py
src/: assets.py  charts.py  schema.py
tests/: test_app.py  test_generation.py
